# os3

./: .gitignore  CONTRIBUTING.md  README.md  flask_report.txt  output.txt  package.json  pom.xml  pyproject.toml  requests_report.txt  requirements-test.txt  requirements.txt
docs/: configuration.md  development.md  features.md  installation.md  vscode_extension.md
src/os3/: __init__.py  __main__.py  alternatives.py  cache.py  cli.py  config.py  deps_dev.py  maven_parser.py  npm_parser.py  scan.py  scorer.py  suppress.py  sync.py  tui.py
tests/: conftest.py  test_cache.py  test_cli.py  test_parsers.py  test_scorer.py  test_suppress.py
