[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "os3"
version = "0.1.0"
description = "Open-Source Security Score CLI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "appdirs>=1.4.4",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "pip-requirements-parser>=32.0.1",
    "rapidfuzz>=3.0.0",
    "textual>=0.40.0",
]

[project.scripts]
os3 = "os3.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/os3"]
